--- a/index.html
+++ b/index.html
@@ -11,8 +11,260 @@
         <!-- font awesome cdn -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
-    <body>
-        <h1>Emergency Hotline</h1>
+    <body class="bg-[#f5fff6]">
+
+        <header>
+            
+            <nav class="px-[60px] py-6 bg-white flex justify-between items-center">
+                <div class="flex items-center gap-[10px]">
+                    <img class="w-[50px]" src="./assets/logo.png" alt="">
+                    <div>
+                        <h2 class="text-[#006747] font-black">Emergency <br> Service</h2>
+                    </div>
+                </div>
+
+                <div class="flex items-center gap-5">
+                    <div class="py-[11px] px-9  rounded-[50px] bg-[#41ff6b1a] flex justify-center items-center gap-[10px]">
+                        <h2 class="font-black">0</h2>
+                        <img class="w-[30px]" src="./assets/heart.png" alt="">
+                    </div>
+
+                    <div class="py-[14px] px-5 rounded-[50px] bg-[#41ff6b1a] flex justify-center items-center gap-[10px]">
+                        <h2 class="font-black">100</h2>
+                        <img class="w-[24px]" src="./assets/coin.png" alt="">
+                    </div>
+
+                    <div class="py-[14px] px-9 rounded-[50px] bg-[#00A63E] flex justify-center items-center gap-[10px]">
+                        <h2 class="font-semibold text-white"><span>2</span> Copy</h2>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="py-5 px-[60px] text-center bg-[linear-gradient(90deg,#013122,#006747_50%,#013223_100%)]">
+                <img class="mx-auto w-[92px]" src="./assets/logo-dark.png" alt="">
+                <h1 class="font-semibold text-[40px] text-white mt-3">জরুরি সেবা ডিরেক্টরি</h1>
+                <p class="font-semibold text-xl text-white mt-3">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+            </div>
+
+        </header>
+
+        <main>
+            <section class="flex justify-between gap-[30px] mt-12 ml-[58px] mr-[62px] pb-[86px]">
+                <div class="w-3/4 grid grid-cols-3 gap-[30px]">
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/emergency.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">জাতীয় জরুরি সেবা</h2>
+                            <p class="text-[#5C5C5C]">National Emergency</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">999</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">সার্বজনীন</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/police.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">পুলিশ</h2>
+                            <p class="text-[#5C5C5C]">Police</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">999</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">পুলিশ</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/fire-service.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">ফায়ার সার্ভিস</h2>
+                            <p class="text-[#5C5C5C]">Fire Service</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">999</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">ফায়ার</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/ambulance.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">অ্যাম্বুলেন্স</h2>
+                            <p class="text-[#5C5C5C]">Ambulance</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">1994-999999</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">স্বাস্থ্য</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/emergency.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">নারী ও শিশু সহায়তা</h2>
+                            <p class="text-[#5C5C5C]">Women & Child Helpline</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">109</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">সহায়তা</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/emergency.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">দুদক</h2>
+                            <p class=" text-[#5C5C5C]">Anti-Corruption</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">106</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">সরকারি</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/emergency.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">বিদ্যুৎ বিভ্রাট</h2>
+                            <p class=" text-[#5C5C5C]">Electricity Outage</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">16216</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">বিদ্যুৎ</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/brac.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">ব্র্যাক</h2>
+                            <p class=" text-[#5C5C5C]">Brac</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">16445</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">এনজিও</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+
+                    <div class="p-8 bg-white rounded-xl shadow-md">
+                        <div class="flex justify-between items-center">
+                            <img class="w-[60px]" src="./assets/Bangladesh-Railway.png" alt="">
+                            <i class="fa-regular fa-heart text-xl"></i>
+                        </div>
+
+                        <div class="mt-4">
+                            <h2 class="text-xl font-bold text-[#111111]">বাংলাদেশ রেলওয়ে</h2>
+                            <p class=" text-[#5C5C5C]">Bangladesh Railway</p>
+                        </div>
+
+                        <div class="mt-6">
+                            <h1 class="text-[#111111] font-bold text-2xl">163</h1>
+                            <p class="inline-block rounded-full mt-1 text-[#5C5C5C] py-[6px] px-4 bg-[#f2f2f2]">পরিবহন</p>
+                        </div>
+
+                        <div class="mt-6 flex gap-2">
+                            <button class="w-1/2 btn btn-neutral btn-outline border-1 border-[#d4d6d5]"><i class="fa-regular fa-copy"></i>Copy</button>
+
+                            <button class="w-1/2 btn text-white bg-[#00A63E] hover:bg-gray-400"><i class="fa-solid fa-phone"></i>Call</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-1/4 border-2 border-green-500 min-h-[500px]">
+
+                </div>
+            </section>
+        </main>
+
         <!-- script js -->
         <script src="./script.js"></script>
     </body>
