--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header>
             
-            <nav class="sm:px-[60px] sm:py-6 p-3 bg-white flex justify-between items-center">
+            <nav class="sm:px-[60px] sm:py-6 p-3 bg-white flex  justify-between items-center sm:gap-0 gap-2">
                 <div class="flex items-center gap-1 sm:gap-[10px]">
                     <img class="w-[50px]" src="./assets/logo.png" alt="">
                     <div>
@@ -23,18 +23,18 @@
                     </div>
                 </div>
 
-                <div class="flex items-center  sm:gap-5 gap-2">
-                    <div class="sm:py-[11px] py-2 sm:px-9 px-3 rounded-[50px] bg-[#41ff6b1a] flex justify-center items-center gap-[10px]">
+                <div class="flex items-center  sm:gap-5 gap-1">
+                    <div class="sm:py-[11px] sm:px-9 p-2 rounded-[50px] bg-[#41ff6b1a] flex justify-center items-center sm:gap-[10px] gap-1">
                         <h2 id="heart-count" class="font-black">0</h2>
                         <img class="sm:w-[30px] w-6" src="./assets/heart.png" alt="">
                     </div>
 
-                    <div class="sm:py-[14px] py-2 sm:px-5 px-3 rounded-[50px] bg-[#41ff6b1a] flex justify-center items-center gap-[10px]">
+                    <div class="sm:py-[14px] sm:px-5 p-2 rounded-[50px] bg-[#41ff6b1a] flex justify-center items-center sm:gap-[10px] gap-1">
                         <h2 id="call-coin" class="font-black">100</h2>
                         <img class="w-[24px]" src="./assets/coin.png" alt="">
                     </div>
 
-                    <div class="sm:py-[14px] py-2 sm:px-9 px-3 rounded-[50px] bg-[#00A63E] flex justify-center items-center gap-[10px]">
+                    <div class="sm:py-[14px] sm:px-9 p-2 rounded-[50px] bg-[#00A63E] flex justify-center items-center sm:gap-[10px] gap-1">
                         <h2 class="font-semibold text-white"><span id="copy-count">0</span> Copy</h2>
                     </div>
                 </div>
@@ -42,15 +42,15 @@
 
             <div class="py-5 px-[60px] text-center bg-[linear-gradient(90deg,#013122,#006747_50%,#013223_100%)]">
                 <img class="mx-auto w-[92px]" src="./assets/logo-dark.png" alt="">
-                <h1 class="font-semibold text-[40px] text-white mt-3">জরুরি সেবা ডিরেক্টরি</h1>
-                <p class="font-semibold text-xl text-white mt-3">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+                <h1 class="font-semibold text-2xl sm:text-[40px] text-white mt-3">জরুরি সেবা ডিরেক্টরি</h1>
+                <p class="font-semibold text-base sm:text-xl text-white mt-3">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
             </div>
 
         </header>
 
-        <main class="hidden">
-            <section class="flex justify-between gap-7 mt-12 mx-[60px] pb-[86px]">
-                <div class="w-3/4 grid grid-cols-3 gap-7">
+        <main>
+            <section class="flex flex-col-reverse sm:flex-row justify-between sm:gap-7 gap-6 sm:mt-12 mt-7 sm:mx-[60px] mx-7 sm:pb-[86px] pb-12">
+                <div class="sm:w-3/4 w-full grid grid-cols-1 sm:grid-cols-3 sm:gap-7 gap-5">
                     <div class="p-8 bg-white rounded-xl shadow-md">
                         <div class="flex justify-between items-center">
                             <img class="w-[60px]" src="./assets/emergency.png" alt="">
@@ -259,7 +259,7 @@
                     </div>
                 </div>
 
-                <div class="w-1/4 p-6 bg-white rounded-xl shadow-md">
+                <div class="sm:w-1/4 w-full p-6 bg-white rounded-xl shadow-md">
                     <div class="flex justify-between items-center mb-4">
                         <div class="flex items-center gap-1">
                             <i class="fa-regular fa-clock text-[#5C5C5C] text-xl"></i>
